--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
 	<head>
-		<title>SanDisk</title>
+		<title>Sharp Shot Australia presented by Western Digital</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link rel="shortcut icon" href="/SharpShot-Fav-Icon.png">
 		<script src="https://code.jquery.com/jquery-2.1.1.js"></script>
 		<link rel="stylesheet" href="src/css/style.css" type="text/css">
 	</head>
@@ -16,27 +17,28 @@
 
 		<div id="pagepiling">
 			<!--Section 1-->
-			<div id="section-1" class="section">
+			<div id="section-1" class="section" style="position:relative;">
 				<div class="site-inner">	
 					<nav class="site-nav">
 						<ul>
 							<li><a href="gallery.php">ENTRIES</a></li>
 							<li><a href="#section-2" class="s-link">PRIZES</a></li>
 							<li><a href="#section-3" class="s-link">REGISTER</a></li>
+							<li><a href="/Final_Sharp Shot_Terms_and_Conditions .pdf" target="_blank">RULES</a></li>
 						</ul>
 					</nav>
 					<div class="content-block">
-						<a href="https://www.sandisk.com.au/">
-							<img src="src/images/logo.png" alt="SanDisk">
-						</a>			
+						<img src="src/images/logo.png" alt="SanDisk">
+								
 						<h3>Sharp Shot presented by Western Digital</h3>
-						<h2>Celebrating YOU and our love of all things photographic,</h2>
+						<h2>Celebrating YOU and our love of all things photographic</h2>
 						<p>Western Digital presents Sharp Shot,<br/>
 						a photography competition looking for your<br/>
 						proudest moments captured with passion. </p>
 						<a href="#section-3" class="btn btn-1 s-link">REGISTER</a>
 					</div>
 				</div>
+				<div id="photo-copyright">Image: Blake Wisz </div>
 			</div>
 
 			<!--Section 2-->
@@ -85,7 +87,7 @@
 						<p>The most outstanding image will take home the major prize of becoming the <strong>Western Digital Australia 2018 photography ambassador!</strong> Win the opportunity of a lifetime with perks like $5,000 from our friends at Ilford to put towards framing and printing your work, and opportunities to have your work shared with thousands of people!</p>
 						<p><strong>50 finalists</strong> will receive a first ever Western Digital prize, and will have their submissions printed, framed and exhibited at an exclusive event in Sydney. All 50 images are guaranteed a place in a limited-edition <strong>Western Digital Australia photography book.</strong> Feeling like a big shot yet?</p>
 						<p>Think it couldn't get any better?</p>
-						<p>3 finalists will also receive a <strong>WD My Passport&#174; `Wireless Pro</strong>, an essential for any adventure photographer. </p>
+						<p>3 finalists will also receive a <a style="color:#000;text-decoration:none;" href="https://www.wdc.com/en-um/products/portable-storage/my-passport-wireless-pro.html" target="_blank"><strong>WD My Passport&#174; Wireless Pro</strong></a>, an essential for any adventure photographer. </p>
 						<p>To be in the running and for your chance to WIN an opportunity of a lifetime, and what could be your big break all you need to do is submit the photo you're most proud of! </p>
 					</div>
 				</div>
@@ -98,6 +100,7 @@
 				</div>
 				<div class="form-block">
 					<form id="submit-form" action="#" method="post" enctype="multipart/form-data">
+						<input type="hidden" id="uploaded-file-name" name="uploaded-file-name" value="">
 						<div class="form-ele">
 							<div class="form-col1">
 								<input id="fullname" type="text" name="fullname" placeholder="Name*">
@@ -127,9 +130,7 @@
 							<div class="form-col1">
 								<div id="file-upload-area">
 									<div class="box__input">
-										<p>Drop photograph to upload</p>
-										<p>OR</p>
-										<a href="#" id="file-btn">Select photograph</a>
+										<p>Drop or <a href="#" id="file-btn">Select</a> photograph to upload</p>
 										<input id="fileToUpload" type="file" name="upload-photo">	
 									</div>
 									<div id="progress-wrp">
@@ -137,16 +138,18 @@
 										<div class="status">0%</div>
 									</div>
 									<div id="output"><!-- error or success results --></div>
+									<a href="#" id="uplaod-btn">UPLOAD</a>
 								</div>
 							</div>
 						</div>
+						<div id="upload-output"></div>
 						<div class="form-ele">
 							<div class="form-col1">
 								<input id="link" type="text" name="link" placeholder="Link to hi-resolution photograph*">
 								<span class="help-box">
 									<a href="#" id="help-icon">?</a>
 									<div class="help-popup-arrow"></div>
-									<div class="help-popup">Please provide a link where we can access your high res image. This means an image  that is 300dpi at 1000x1000mm.</div>
+									<div class="help-popup">Please provide a link where we can access your high res image. This means an image  that is 300dpi at 1000x1000mm. Please ensure your link begins with http(s)://</div>
 								</span>
 							</div>
 						</div>
@@ -162,7 +165,7 @@
 								<input type="checkbox" id="check-3"><label>Yes, If I am a finalist I agree to have my image shared on Western Digital social media accounts worldwide, including that of WD and SanDisk.</label>
 							</div>
 							<div class="form-col1">
-								<input type="checkbox" id="check-4"><label>Yes, I have read and agree to the terms and conditions and privacy policy: <a href="https://www.sandisk.com.au/about/legal/privacy-global" target="_blank">https://www.sandisk.com.au/about/legal/privacy-global</a></label>
+								<input type="checkbox" id="check-4"><label>Yes, I have read and agree to the <a href="/Final_Sharp Shot_Terms_and_Conditions .pdf" target="_blank">terms and conditions</a> and privacy policy: <a href="https://www.sandisk.com.au/about/legal/privacy-global" target="_blank">https://www.sandisk.com.au/about/legal/privacy-global</a></label>
 							</div>
 							<div class="form-col1">
 								<input type="checkbox" name="newsletter" id="terms-check"><label>Yes, I would love to receive news and updates regarding SanDisk and WD products, promotions and exclusive events!</label>
@@ -192,9 +195,36 @@
 			</div>
 		</footer>
 		<div id="thankyou-box">
-			<h3>Your entry has been received. You can view all entries here.<br/><br/>Good luck!</h3>
-			<a href="/gallery.php">Here to be a link to entries page.</a>
+			<h3>Your entry has been received. You can view all entries <a href="/gallery.php">here</a>.<br/><br/>Good luck!</h3>
 		</div>
 	</body>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	  
+		ga('create', 'UA-106044771-1', 'auto');
+		ga('send', 'pageview');
+	  
+	</script>
+	<!-- Facebook Pixel Code -->
+	<script>
+		!function(f,b,e,v,n,t,s)
+		{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+		n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+		if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+		n.queue=[];t=b.createElement(e);t.async=!0;
+		t.src=v;s=b.getElementsByTagName(e)[0];
+		s.parentNode.insertBefore(t,s)}(window,document,'script',
+		'https://connect.facebook.net/en_US/fbevents.js');
+		fbq('init', '652916671763143'); 
+		fbq('track', 'PageView');
+		</script>
+	<noscript>
+		<img height="1" width="1" src="https://www.facebook.com/tr?id=652916671763143&ev=PageView&noscript=1"/>
+	</noscript>
+	<!-- End Facebook Pixel Code -->
+	
 	<script src="src/js/app.js"></script>
 </html>
